--- a/frontend/src/app/components/base-list-component/base-list-component.html
+++ b/frontend/src/app/components/base-list-component/base-list-component.html
@@ -8,22 +8,27 @@
           (click)="col.sortable && onSort(col.key)"
         >
           {{ col.label }}
-          @if(sortKey === col.key) {
+          @if (sortKey === col.key) {
           {{ sortAsc ? "▲" : "▼" }}
           }
         </th>
-        }
+        } @if (showActions) {
         <th class="px-4 py-3 text-center">Ações</th>
+        }
       </tr>
     </thead>
+
     <tbody class="divide-y divide-gray-100">
       @for (item of data; track item.id) {
-      <tr class="hover:bg-gray-50 odd:bg-white even:bg-gray-50">
+      <tr
+        (click)="!showActions && onRowClick(item)"
+        class="hover:bg-gray-50 odd:bg-white even:bg-gray-50"
+      >
         @for (col of columns; track col.key) {
         <td class="px-4 py-3">
-          @if(col.type === 'date') {
+          @if (col.type === 'date') {
           {{ formatDate(item[col.key]) | date : "dd/MM/yyyy" }}
-          } @else if(col.type === 'status') {
+          } @else if (col.type === 'status') {
           <span
             class="px-2 py-1 text-xs rounded-full"
             [class.bg-green-100]="item[col.key] === 'ATIVO'"
@@ -39,7 +44,7 @@
           {{ item[col.key] }}
           }
         </td>
-        }
+        } @if (showActions) {
         <td class="px-4 py-3 text-center space-x-2">
           <button
             class="px-3 py-1 text-xs font-medium text-white bg-blue-600 rounded hover:bg-blue-700"
@@ -54,6 +59,7 @@
             Detalhes
           </button>
         </td>
+        }
       </tr>
       }
     </tbody>
