--- a/frontend/src/app/pages/trip/details-trip/details-trip.html
+++ b/frontend/src/app/pages/trip/details-trip/details-trip.html
@@ -22,12 +22,12 @@
         </div>
         <div>
           <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Veículo</label>
-          <p class="text-gray-800 text-sm">{{ trip.vehicleId }}</p>
+          <p class="text-gray-800 text-sm">{{ trip.vehiclePlate }}</p>
         </div>
 
         <div>
           <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">Motorista</label>
-          <p class="text-gray-800 text-sm">{{ trip.driverId }}</p>
+          <p class="text-gray-800 text-sm">{{ trip.driverName }}</p>
         </div>
 
         <div>
