--- a/frontend/src/app/pages/not-found/not-found.html
+++ b/frontend/src/app/pages/not-found/not-found.html
@@ -9,7 +9,7 @@
       routerLink="/"
       class="inline-block px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 shadow-md transition-colors"
     >
-      Voltar para o Login
+      Voltar para o Menu
     </a>
   </div>
 </div>
