--- a/frontend/src/app/pages/expenses/create-expense/create-expense.html
+++ b/frontend/src/app/pages/expenses/create-expense/create-expense.html
@@ -1,1 +1,6 @@
-<p>create-expense works!</p>
+<div class="p-6">
+  <h2 class="text-2xl font-semibold mb-4">Registro de Despesa</h2>
+
+  <app-dynamic-form [fields]="expenseFields" (formSubmit)="saveExpense($event)">
+  </app-dynamic-form>
+</div>
