--- a/frontend/src/app/pages/expenses/expenses.html
+++ b/frontend/src/app/pages/expenses/expenses.html
@@ -7,7 +7,7 @@
       [class.text-blue-600]="activeTab === 'list'"
       class="pb-2 px-4 font-medium hover:text-blue-500"
     >
-      Listar Motoristas
+      Listar Despesas
     </button>
     <button
       (click)="selectTab('create')"
@@ -15,7 +15,7 @@
       [class.text-blue-600]="activeTab === 'create'"
       class="pb-2 px-4 font-medium hover:text-blue-500"
     >
-      Registrar Motorista
+      Registrar Despesa
     </button>
   </div>
 
