--- a/frontend/src/app/pages/expenses/list-expense/list-expense.html
+++ b/frontend/src/app/pages/expenses/list-expense/list-expense.html
@@ -1,1 +1,44 @@
-<p>list-expense works!</p>
+<div class="flex flex-wrap justify-between mb-4 gap-4">
+  <!-- Filtros dinâmicos -->
+  <app-base-filter
+    [filtersConfig]="expenseFilters"
+    [(filter)]="filter"
+    (apply)="applyFilters()"
+    (clear)="clearFilters()"
+  ></app-base-filter>
+
+  <!-- Paginador -->
+  <div class="flex items-center">
+    <app-paginator
+      [totalItems]="total"
+      [itemsPerPage]="limit"
+      [totalPages]="totalPages"
+      [page]="page"
+      (pageChanged)="onPageChange($event)"
+    ></app-paginator>
+  </div>
+</div>
+
+<app-base-list
+  [columns]="expenseColumns"
+  [data]="expenses"
+  [page]="page"
+  [limit]="limit"
+  [total]="total"
+  [totalPages]="totalPages"
+  [sortKey]="sortKey"
+  [sortAsc]="sortAsc"
+  (sortChange)="sortBy($event)"
+  (pageChange)="onPageChange($event)"
+  (edit)="onEdit($event)"
+  (details)="onNavDetails($event)"
+></app-base-list>
+
+<app-modal-edit-component
+  [title]="'Editar Motorista'"
+  [show]="showModal"
+  [entity]="selectedExpense"
+  [fields]="expenseFields"
+  (close)="onCloseModal()"
+  (save)="onSaveModal($event)"
+></app-modal-edit-component>
