--- a/frontend/src/app/pages/dashboard/menu.html
+++ b/frontend/src/app/pages/dashboard/menu.html
@@ -3,13 +3,13 @@
 
   <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-2">
     @for (item of menus; track $index) {
-      <a
-        [routerLink]="item.route"
-        class="flex items-center space-x-2 p-2 rounded hover:bg-gray-100 transition text-gray-800 no-underline"
-      >
-        <span class="material-icons text-gray-600">{{ item.icon }}</span>
-        <span>{{ item.name }}</span>
-      </a>
+    <a
+      [routerLink]="item.route"
+      class="flex items-center space-x-2 p-2 rounded hover:bg-gray-100 transition text-gray-800 no-underline"
+    >
+      <ng-icon [name]="item.icon" class="text-3xl text-gray-600"></ng-icon>
+      <span>{{ item.name }}</span>
+    </a>
     }
   </div>
 </section>
