--- a/frontend/src/app/pages/login/login.html
+++ b/frontend/src/app/pages/login/login.html
@@ -10,7 +10,7 @@
       <form (ngSubmit)="login()" class="space-y-4">
         <!-- Usuário -->
         <div class="flex items-center border border-gray-300 rounded px-3">
-          <i class="fas fa-user text-gray-500"></i>
+          <ng-icon name="heroUserSolid" class="w-5 h-5 text-gray-500"></ng-icon>
           <input
             type="text"
             placeholder="Usuário"
@@ -22,14 +22,31 @@
 
         <!-- Senha -->
         <div class="flex items-center border border-gray-300 rounded px-3">
-          <i class="fas fa-lock text-gray-500"></i>
+          <!-- Ícone de cadeado -->
+          <ng-icon
+            name="heroLockClosedSolid"
+            class="w-5 h-5 text-gray-500"
+          ></ng-icon>
+
           <input
-            type="password"
+            [type]="showPassword ? 'text' : 'password'"
             placeholder="Senha"
             [(ngModel)]="password"
             name="password"
             class="w-full p-2 outline-none"
           />
+
+          <!-- Botão Olhinho -->
+          <button
+            type="button"
+            (click)="togglePassword()"
+            class="ml-2 text-gray-500 hover:text-gray-700 focus:outline-none"
+          >
+            <ng-icon
+              [name]="showPassword ? 'heroEyeSlashSolid' : 'heroEyeSolid'"
+              class="w-5 h-5"
+            ></ng-icon>
+          </button>
         </div>
 
         <!-- Botão -->
@@ -39,22 +56,22 @@
           class="w-full bg-cyan-600 hover:bg-cyan-700 text-white font-semibold py-2 rounded flex items-center justify-center"
         >
           @if (isLoading) {
-            <span class="loader border-2 border-white border-t-transparent rounded-full w-5 h-5 animate-spin mr-2"></span>
-            Entrando...
-          } @else {
-            Entrar
-          }
+          <span
+            class="loader border-2 border-white border-t-transparent rounded-full w-5 h-5 animate-spin mr-2"
+          ></span>
+          Entrando... } @else { Entrar }
         </button>
 
         <!-- Link Esqueceu senha -->
-        <div class="text-right">
+        <!-- <div class="text-right">
           <a href="#" class="text-sm text-gray-500 hover:underline"
             >Esqueceu sua senha?</a
           >
-        </div>
+        </div> -->
       </form>
 
       <!-- Versão -->
-      <p class="text-center text-xs text-gray-400 mt-4">Versão 1.0</p>
+      <p class="text-center text-xs text-gray-400 mt-4">Versão 0.0.1</p>
     </div>
   </div>
+</div>
