--- a/frontend/src/app/pages/refueling/create-refueling/create-refueling.html
+++ b/frontend/src/app/pages/refueling/create-refueling/create-refueling.html
@@ -94,7 +94,7 @@
     <img
       src="refueling.png"
       alt="Abastecimento"
-      class="max-h-64 opacity-90 rounded-lg shadow-md"
+      class="max-h-64 opacity-90 rounded-lg custom-shadow-img"
     />
   </div>
 </div>
