--- a/frontend/src/app/pages/driver/create-driver/create-driver.html
+++ b/frontend/src/app/pages/driver/create-driver/create-driver.html
@@ -1,8 +1,22 @@
-<div class="p-6">
-  <h2 class="text-2xl font-semibold mb-4">Cadastro de Motorista</h2>
+<div
+  class="max-w-5xl mx-auto mt-8 p-6 bg-white shadow rounded-lg border border-gray-200 grid grid-cols-1 lg:grid-cols-3 gap-8"
+>
+  <!-- Coluna principal com formulário -->
+  <div class="lg:col-span-2">
+    <h2 class="text-2xl font-semibold mb-4">Cadastro de Motorista</h2>
 
-  <app-dynamic-form
-    [fields]="motoristaFields"
-    (formSubmit)="saveDriver($event)">
-  </app-dynamic-form>
+    <app-dynamic-form
+      [fields]="motoristaFields"
+      (formSubmit)="saveDriver($event)">
+    </app-dynamic-form>
+  </div>
+
+  <!-- Coluna lateral com imagem ilustrativa -->
+  <div class="hidden lg:flex items-center justify-center">
+    <img
+      src="driver.png"
+      alt="Ilustração de motorista"
+      class="max-h-64 opacity-90 custom-shadow-img"
+    />
+  </div>
 </div>
