--- a/frontend/src/app/pages/maintenance/create-maintenance/create-maintenance.html
+++ b/frontend/src/app/pages/maintenance/create-maintenance/create-maintenance.html
@@ -70,7 +70,7 @@
     <img
       src="maintenance.jpg"
       alt="Manutenção"
-      class="max-h-64 opacity-90 rounded-lg shadow-md"
+      class="max-h-64 opacity-90 rounded-lg custom-shadow-img"
     />
   </div>
 
