--- a/frontend/src/app/pages/trip/details-trip/details-trip.html
+++ b/frontend/src/app/pages/trip/details-trip/details-trip.html
@@ -23,14 +23,36 @@
             class="block text-xs font-semibold text-gray-500 uppercase mb-1"
             >ID</label
           >
-          <p class="text-gray-800 text-sm">{{ trip.id }}</p>
+          <p class="text-gray-800 text-sm">
+            @if (trip.id) {
+            <a
+              class="cursor-pointer hover:underline"
+              (click)="navigateToTrip()"
+            >
+              {{ trip.id }}
+            </a>
+            } @else {
+            {{ trip.id || "-" }}
+            }
+          </p>
         </div>
         <div>
           <label
             class="block text-xs font-semibold text-gray-500 uppercase mb-1"
             >Veículo</label
           >
-          <p class="text-gray-800 text-sm">{{ trip.vehiclePlate }}</p>
+          <p class="text-gray-800 text-sm">
+            @if (trip.vehicleId) {
+            <a
+              class="cursor-pointer hover:underline"
+              (click)="navigateToVehicle()"
+            >
+              {{ trip.vehiclePlate || "-" }}
+            </a>
+            } @else {
+            {{ trip.vehiclePlate || "-" }}
+            }
+          </p>
         </div>
 
         <div>
@@ -38,7 +60,18 @@
             class="block text-xs font-semibold text-gray-500 uppercase mb-1"
             >Motorista</label
           >
-          <p class="text-gray-800 text-sm">{{ trip.driverName }}</p>
+          <p class="text-gray-800 text-sm">
+            @if (trip.driverId) {
+            <a
+              class="cursor-pointer hover:underline"
+              (click)="navigateToDriver()"
+            >
+              {{ trip.driverName || "-" }}
+            </a>
+            } @else {
+            {{ trip.driverName || "-" }}
+            }
+          </p>
         </div>
 
         <div>
